@@ -26,7 +26,6 @@ import org.elasticsearch.common.ParseField;
 import org.elasticsearch.common.Strings;
 import org.elasticsearch.common.lucene.Lucene;
 import org.elasticsearch.common.unit.ByteSizeValue;
-import org.elasticsearch.common.xcontent.ToXContent;
 import org.elasticsearch.common.xcontent.ToXContentFragment;
 import org.elasticsearch.common.xcontent.XContentBuilder;
 import org.elasticsearch.common.xcontent.XContentParser;
@@ -247,9 +246,8 @@ public class BlobStoreIndexShardSnapshot implements ToXContentFragment {
          *
          * @param file    file info
          * @param builder XContent builder
-         * @param params  parameters
          */
-        public static void toXContent(FileInfo file, XContentBuilder builder, ToXContent.Params params) throws IOException {
+        public static void toXContent(FileInfo file, XContentBuilder builder) throws IOException {
             builder.startObject();
             builder.field(NAME, file.name);
             builder.field(PHYSICAL_NAME, file.metadata.name());
@@ -266,7 +264,8 @@ public class BlobStoreIndexShardSnapshot implements ToXContentFragment {
             }
 
             if (file.metadata.hash() != null && file.metadata().hash().length > 0) {
-                builder.field(META_HASH, file.metadata.hash());
+                BytesRef br = file.metadata.hash();
+                builder.field(META_HASH, br.bytes, br.offset, br.length);
             }
             builder.endObject();
         }
@@ -355,56 +354,37 @@ public class BlobStoreIndexShardSnapshot implements ToXContentFragment {
 
     private final long time;
 
-    private final int numberOfFiles;
+    private final int incrementalFileCount;
 
-    private final long totalSize;
+    private final long incrementalSize;
 
     private final List<FileInfo> indexFiles;
 
     /**
      * Constructs new shard snapshot metadata from snapshot metadata
      *
-     * @param snapshot      snapshot id
-     * @param indexVersion  index version
-     * @param indexFiles    list of files in the shard
-     * @param startTime     snapshot start time
-     * @param time          snapshot running time
-     * @param numberOfFiles number of files that where snapshotted
-     * @param totalSize     total size of all files snapshotted
+     * @param snapshot              snapshot id
+     * @param indexVersion          index version
+     * @param indexFiles            list of files in the shard
+     * @param startTime             snapshot start time
+     * @param time                  snapshot running time
+     * @param incrementalFileCount  incremental of files that were snapshotted
+     * @param incrementalSize       incremental size of snapshot
      */
-    public BlobStoreIndexShardSnapshot(String snapshot, long indexVersion, List<FileInfo> indexFiles, long startTime, long time,
-                                       int numberOfFiles, long totalSize) {
+    public BlobStoreIndexShardSnapshot(String snapshot, long indexVersion, List<FileInfo> indexFiles,
+                                       long startTime, long time,
+                                       int incrementalFileCount,
+                                       long incrementalSize
+    ) {
         assert snapshot != null;
         assert indexVersion >= 0;
         this.snapshot = snapshot;
         this.indexVersion = indexVersion;
-        this.indexFiles = Collections.unmodifiableList(new ArrayList<>(indexFiles));
+        this.indexFiles = List.copyOf(indexFiles);
         this.startTime = startTime;
         this.time = time;
-        this.numberOfFiles = numberOfFiles;
-        this.totalSize = totalSize;
-    }
-
-    /**
-     * Special constructor for the prototype
-     */
-    private BlobStoreIndexShardSnapshot() {
-        this.snapshot = "";
-        this.indexVersion = 0;
-        this.indexFiles = Collections.emptyList();
-        this.startTime = 0;
-        this.time = 0;
-        this.numberOfFiles = 0;
-        this.totalSize = 0;
-    }
-
-    /**
-     * Returns index version
-     *
-     * @return index version
-     */
-    public long indexVersion() {
-        return indexVersion;
+        this.incrementalFileCount = incrementalFileCount;
+        this.incrementalSize = incrementalSize;
     }
 
     /**
@@ -440,34 +420,51 @@ public class BlobStoreIndexShardSnapshot implements ToXContentFragment {
     }
 
     /**
-     * Returns number of files that where snapshotted
+     * Returns incremental of files that were snapshotted
      */
-    public int numberOfFiles() {
-        return numberOfFiles;
+    public int incrementalFileCount() {
+        return incrementalFileCount;
+    }
+
+    /**
+     * Returns total number of files that are referenced by this snapshot
+     */
+    public int totalFileCount() {
+        return indexFiles.size();
+    }
+
+    /**
+     * Returns incremental of files size that were snapshotted
+     */
+    public long incrementalSize() {
+        return incrementalSize;
     }
 
     /**
      * Returns total size of all files that where snapshotted
      */
     public long totalSize() {
-        return totalSize;
+        return indexFiles.stream().mapToLong(fi -> fi.metadata().length()).sum();
     }
 
     private static final String NAME = "name";
     private static final String INDEX_VERSION = "index_version";
     private static final String START_TIME = "start_time";
     private static final String TIME = "time";
-    private static final String NUMBER_OF_FILES = "number_of_files";
-    private static final String TOTAL_SIZE = "total_size";
     private static final String FILES = "files";
+    // for the sake of BWC keep the actual property names as in 6.x
+    // + there is a constraint in #fromXContent() that leads to ElasticsearchParseException("unknown parameter [incremental_file_count]");
+    private static final String INCREMENTAL_FILE_COUNT = "number_of_files";
+    private static final String INCREMENTAL_SIZE = "total_size";
 
-    private static final ParseField PARSE_NAME = new ParseField("name");
-    private static final ParseField PARSE_INDEX_VERSION = new ParseField("index_version", "index-version");
-    private static final ParseField PARSE_START_TIME = new ParseField("start_time");
-    private static final ParseField PARSE_TIME = new ParseField("time");
-    private static final ParseField PARSE_NUMBER_OF_FILES = new ParseField("number_of_files");
-    private static final ParseField PARSE_TOTAL_SIZE = new ParseField("total_size");
-    private static final ParseField PARSE_FILES = new ParseField("files");
+
+    private static final ParseField PARSE_NAME = new ParseField(NAME);
+    private static final ParseField PARSE_INDEX_VERSION = new ParseField(INDEX_VERSION, "index-version");
+    private static final ParseField PARSE_START_TIME = new ParseField(START_TIME);
+    private static final ParseField PARSE_TIME = new ParseField(TIME);
+    private static final ParseField PARSE_INCREMENTAL_FILE_COUNT = new ParseField(INCREMENTAL_FILE_COUNT);
+    private static final ParseField PARSE_INCREMENTAL_SIZE = new ParseField(INCREMENTAL_SIZE);
+    private static final ParseField PARSE_FILES = new ParseField(FILES);
 
     /**
      * Serializes shard snapshot metadata info into JSON
@@ -481,11 +478,11 @@ public class BlobStoreIndexShardSnapshot implements ToXContentFragment {
         builder.field(INDEX_VERSION, indexVersion);
         builder.field(START_TIME, startTime);
         builder.field(TIME, time);
-        builder.field(NUMBER_OF_FILES, numberOfFiles);
-        builder.field(TOTAL_SIZE, totalSize);
+        builder.field(INCREMENTAL_FILE_COUNT, incrementalFileCount);
+        builder.field(INCREMENTAL_SIZE, incrementalSize);
         builder.startArray(FILES);
         for (FileInfo fileInfo : indexFiles) {
-            FileInfo.toXContent(fileInfo, builder, params);
+            FileInfo.toXContent(fileInfo, builder);
         }
         builder.endArray();
         return builder;
@@ -502,8 +499,8 @@ public class BlobStoreIndexShardSnapshot implements ToXContentFragment {
         long indexVersion = -1;
         long startTime = 0;
         long time = 0;
-        int numberOfFiles = 0;
-        long totalSize = 0;
+        int incrementalFileCount = 0;
+        long incrementalSize = 0;
 
         List<FileInfo> indexFiles = new ArrayList<>();
         if (parser.currentToken() == null) { // fresh parser? move to the first token
@@ -525,10 +522,10 @@ public class BlobStoreIndexShardSnapshot implements ToXContentFragment {
                             startTime = parser.longValue();
                         } else if (PARSE_TIME.match(currentFieldName, parser.getDeprecationHandler())) {
                             time = parser.longValue();
-                        } else if (PARSE_NUMBER_OF_FILES.match(currentFieldName, parser.getDeprecationHandler())) {
-                            numberOfFiles = parser.intValue();
-                        } else if (PARSE_TOTAL_SIZE.match(currentFieldName, parser.getDeprecationHandler())) {
-                            totalSize = parser.longValue();
+                        } else if (PARSE_INCREMENTAL_FILE_COUNT.match(currentFieldName, parser.getDeprecationHandler())) {
+                            incrementalFileCount = parser.intValue();
+                        } else if (PARSE_INCREMENTAL_SIZE.match(currentFieldName, parser.getDeprecationHandler())) {
+                            incrementalSize = parser.longValue();
                         } else {
                             throw new ElasticsearchParseException("unknown parameter [{}]", currentFieldName);
                         }
@@ -548,7 +545,8 @@ public class BlobStoreIndexShardSnapshot implements ToXContentFragment {
                 }
             }
         }
+
         return new BlobStoreIndexShardSnapshot(snapshot, indexVersion, Collections.unmodifiableList(indexFiles),
-                                               startTime, time, numberOfFiles, totalSize);
+                                               startTime, time, incrementalFileCount, incrementalSize);
     }
 }
